cluster/apps/default/st0rage/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: st0rage-auth
  namespace: default
spec:
  basicAuth:
    secret: st0rage
