cluster/apps/default/st0rage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: st0rage
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: st0rage
