cluster/apps/default/st0rage/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: st0rage
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "nas"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "default-st0rage-auth@kubernetescrd"
    external-dns.alpha.kubernetes.io/target: "dns.${SECRET_LAB_DOMAIN}"
spec:
  tls:
    - secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
      hosts:
        - st0rage.${SECRET_LAB_DOMAIN}
  rules:
    - host: st0rage.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: st0rage
                port:
                  name: http
